# Q-Sherpa

./: README.md
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  main.py  pyproject.toml  test_request.py
backend/data/: equipments.json  members.json
backend/src/: equipment_solver.py  grouping_solver.py  loader.py  models.py
frontend/: DEMO_README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  wrangler.jsonc
frontend/app/: app.vue
frontend/app/assets/scss/: _base.scss  _variables.scss
frontend/app/components/: MathJax.vue
frontend/app/composables/: useQsherpaApi.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/pages/about/: index.vue
frontend/app/pages/demo/: index.vue
frontend/app/types/: index.d.ts
