[project]
name = "jishinkai-match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "jijmodeling>=1.14.1",
    "uvicorn>=0.38.0",
    "pydantic==2.12.5",
    "openjij>=0.11.6",
    "pyqubo>=1.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ommx-openjij-adapter>=2.3.2",
]
